FIX: all popup components utilizing table and more readable classes. filter by/search/add row now utilizing tables and less css for better reabability.

--- a/client/src/components/Inventory/inventory.css
+++ b/client/src/components/Inventory/inventory.css
@@ -1,21 +1,13 @@
 
 /* Inventory page */
-.inventory-container {
-    display: flex;
-    justify-content: center;
+
+  .table-filter-search-add {
+    background-color: #eee;
     max-width: 1200px;
-    margin: auto;
-  }
-  
-  .inventory-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
   }
   
   .filter-style {
-    width: 100%;
+    width: 95%;
     padding:10px 7px;
     background-color: #ddd;
     color:#242424;
@@ -23,14 +15,8 @@
     border-radius: 5px;
   }
   
-  .filter-item {
-    background-color: #ddd;
-    color:#242424;
-    padding:5px 20px;
-  }
-  
   .search-input {
-    width:100%;
+    width:95%;
     padding:10px 7px;
     background-color: #ddd;
     color:#242424;
@@ -42,28 +28,9 @@
     border-color:#242424;
     outline: none;
   }
-
-  .inventory-filter-by {
-    flex:1;
-    padding: 5px 5px 5px 0;
-  }
-  
-  .inventory-add-product {
-    display: flex;
-    flex: 1;
-    justify-content: flex-end;
-    margin-left: auto;
-  }
-
-  .inventory-search {
-    flex: 1;
-    padding: 0 5px 0 0;
-  }
   
   .add-prod-btn{
-    align-items: center;
-    width:50%;
-    padding:10px 7px;
+    width:95%;
     background-color: #2ca39d;
     color:#fff;
   }
@@ -76,20 +43,16 @@
   
   /* inventory media queries for mobile */
   @media screen and (max-width: 570px) {
-    .inventory-container {
+    .table-filter-search-add {
       flex-direction: column;
       justify-content: center;
       align-items: stretch;
     }
   
-    .inventory-row {
+    .tr-filter-search-add {
       flex-direction: column;
       justify-content: center;
       align-items: stretch;
-    }
-  
-    .inventory-filter-by {
-      padding: 5px 0 5px 0;
     }
   
     .inventory-search {
@@ -169,6 +132,12 @@
     display: flex;
     flex: 1;
     justify-content: center;
+  }
+
+  .filter-item {
+    background-color: #ddd;
+    color:#242424;
+    padding:5px 20px;
   }
   
   /* inventory items media queries for ipad and smaller */
